# g1_motion_player

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  README_EN.md  build_foxy_docker.sh  pyproject.toml  run_foxy_docker.sh
api/: __init__.py  csv_motion.py  main.py
assets/: wave.csv  wave_debug.json  zuoyi.csv
assets/json/: zuoyi.json
docker/foxy/: Dockerfile  measure_lowstate_rate.py  read_upper_body.py  test_publisher.py
docs/: api.md  g1_robot_deployment.md  initial_pose_analysis.md  remote_pull_prompt.md  ros2_docker.md
docs/log/: 2026-06-26.md
docs/superpowers/plans/: 2026-07-02-local-http-api.md
docs/superpowers/specs/: 2026-07-02-http-api-design.md
src/: csv_replay.cpp  csv_replay_debug.cpp  g1_mode_switch.cpp  json_replay.cpp  replay_planner.hpp  state_recorder.cpp  test_connection.cpp
src/core/: motion_core.hpp
src/ros2/: CMakeLists.txt  csv_replay_ros2.cpp  package.xml
tests/: replay_planner_test.cpp  test_api.py  test_csv_motion.py
